Fix images and extra padding

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -125,7 +125,7 @@ h1 {
         margin: 0;
     }
     .extra-padding {
-        padding: 12rem 0;
+        padding: 12rem 6.5rem;
     }
 }
 
